-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Component/s: Drivers: Filesystems
-
Labels:
-
Guilty Commit:0.4.8-dev-117-ga1d7e99 https://git.reactos.org/?p=reactos.git;a=commit;h=a1d7e9936d8e58bc07ff2cc73a937ce845c7d542
Environment details: ReactOS 0.4.15-x86-dev (Build 20210508-0.4.15-dev-2522-g9e0a3cd)
VM QEMU 2.7.0
First of all, we need an EXT2 partition mounted in ReactOS, my setup has ReactOS installed on a FAT32 partition and a secondary EXT2 partition in the same virtual disk
Steps to reproduce:
1) Download Fossil-SCM from https://fossil-scm.org/home/uv/fossil-w32-2.15.1.zip
2) Unpack, put in the PATH variable, restart Reactos
3) CD to any dir in the EXT2 partition and then clone my test repo by executing this command:
fossil clone --no-open http://anonymous@chiselapp.com/user/julcar/repository/IguanaCMS/ IguanaCMS.fossil
(if requests a password just type 000 or whatever string)
4) Once clone process completed, open the repo (create a checkout)
fossil open -f IguanaCMS.fossil
The last command will fail with the error "unable to open file XXX for writing" when fossil tries to create files on empty subdirectories
The workaround is to run the last command several times until it creates and populates with files all of the subdirectories.
This misbehavior is not present on FAT32 partition.
- blocks
-
CORE-13980 Update Ext2Fsd to version 0.69 from version 0.68
-
- Resolved
-
- is duplicated by
-
CORE-17195 Ext2 filesystem corruption
-
- Resolved
-